--- a/src/main/resources/templates/fragments/filtros.html
+++ b/src/main/resources/templates/fragments/filtros.html
@@ -3,31 +3,16 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between px-6 gap-4">
 
         <div class="flex items-center gap-4">
-            <div class="relative flex items-center mt-1">
-                <span class="material-icons absolute left-3 text-gray-400 pointer-events-none">search</span>
-                <input type="text" placeholder="Buscar publicaciones..." name="query"
-                       class="w-full border border-gray-300 rounded pl-10 pr-4 py-2 focus:outline-none focus:ring-2-indigo-500"/>
-            </div>
-            <div class="relative group">
-                <button class="flex items-center border border-gray-300 px-4 py-2 rounded hover:bg-gray-100 transition">
-                    <span class="material-icons mr-2 text-gray-500">filter_list</span>
-                    Filtrar por
-                    <span class="material-icons ml-2">expand_more</span>
-                </button>
-                <div id="downdrop" class="absolute top-full mt-1 bg-white border rounded shadow w-48 z-10 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 pointer-events-auto">
-                    <div class="p-2 space-y-2">
-                        <label class="flex items-center">
-                            <input type="checkbox" name="tipo" value="bien" class="mr-2" />
-                            Bien
-                        </label>
-                        <label class="flex items-center">
-                            <input type="checkbox" name="tipo" value="servicio" class="mr-2" />
-                            Servicio
-                        </label>
-                    </div>
+            <form th:action="@{/publicaciones/home}" method="get">
+                <div class="relative flex items-center mt-1">
+                    <span class="material-icons absolute left-3 text-gray-400 pointer-events-none">search</span>
+                    <input type="text" placeholder="Buscar publicaciones..." name="titulo"
+                           class="w-full border border-gray-300 rounded pl-10 pr-4 py-2 focus:outline-none focus:ring-2-indigo-500"/>
+                    <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded-r hover:bg-indigo-700">Buscar</button>
                 </div>
-            </div>
+            </form>
         </div>
+
         <div class="ml-auto">
             <a th:if="${usuario != null}"
                th:href="@{/publicaciones/create}"
