--- a/src/main/resources/templates/publicaciones/list.html
+++ b/src/main/resources/templates/publicaciones/list.html
@@ -8,8 +8,8 @@
     </head>
     <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800 pt-[128px]">
         <th:block th:replace="~{fragments/encabezado :: encabezado}"></th:block>
+        <th:block th:replace="~{fragments/filtros :: filtros}"></th:block>
 
-        <!-- Contenido principal -->
         <main class="flex-grow max-w-7xl w-full mx-auto px-4 sm:px-6 lg:px-8 mt-8">
             <th:block th:replace="~{fragments/publicaciones :: publicaciones}"></th:block>
         </main>
