--- a/src/main/resources/templates/fragments/publicaciones.html
+++ b/src/main/resources/templates/fragments/publicaciones.html
@@ -3,18 +3,15 @@
         <div th:if="${not #lists.isEmpty(publicaciones)}" class="grid grid-cols-3 gap-8">
             <div th:each="publicacion, stat : ${publicaciones}">
                 <!-- Tarjeta de la publicación con tamaño homogéneo -->
-                <div class="bg-white rounded-2xl shadow-md hover:shadow-lg transition overflow-hidden flex flex-col w-full min-h-[290px]">
+                <div class="relative bg-white rounded-2xl shadow-md hover:shadow-lg transition overflow-hidden flex flex-col w-full min-h-[290px]">
                     <div class="p-4 flex flex-col flex-grow">
                         <h3 class="text-lg font-semibold text-indigo-700 mb-1" th:text="${publicacion.titulo}"></h3>
 
-                        <div th:if="${usuario != null and publicacion.usuario != null and usuario.id == publicacion.usuario.id}" class="flex space-x-2">
-                            <!-- Icono editar (lápiz) -->
+                        <div th:if="${usuario != null and publicacion.usuario != null and usuario.id == publicacion.usuario.id}" class="flex space-x-2 absolute right-4 top-4 ">
                             <a th:href="@{'/publicaciones/update/' + ${publicacion.id}}" title="Editar">
                                 <span class="material-icons text-indigo-500 hover:text-indigo-700 cursor-pointer">edit</span>
                             </a>
-                            <!-- Icono borrar (papelera) -->
-                            <a th:href="@{'/publicaciones/delete/' + ${publicacion.id}}" title="Borrar"
-                               onclick="return confirm('¿Seguro que quieres borrar esta publicación?')">
+                            <a th:href="@{'/publicaciones/delete/' + ${publicacion.id}}" title="Borrar">
                                 <span class="material-icons text-red-500 hover:text-red-700 cursor-pointer">delete</span>
                             </a>
                         </div>
