--- a/src/main/resources/templates/fragments/publicaciones.html
+++ b/src/main/resources/templates/fragments/publicaciones.html
@@ -11,9 +11,12 @@
                             <a th:href="@{'/publicaciones/update/' + ${publicacion.id}}" title="Editar">
                                 <span class="material-icons text-indigo-500 hover:text-indigo-700 cursor-pointer">edit</span>
                             </a>
-                            <a th:href="@{'/publicaciones/delete/' + ${publicacion.id}}" title="Borrar">
-                                <span class="material-icons text-red-500 hover:text-red-700 cursor-pointer">delete</span>
-                            </a>
+                            <form th:action="@{'/publicaciones/delete/' + ${publicacion.id}}" method="post" style="display:inline;">
+                                <button type="submit" title="Borrar">
+                                    <span class="material-icons text-red-500 hover:text-red-700 cursor-pointer">delete</span>
+                                </button>
+                            </form>
+
                         </div>
 
                         <span th:if="${publicacion.descripcion != null}" th:text="${publicacion.descripcion}"
